Fixed line-height, letter-spacing and spaces in footer button

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ body{
 
 .nav-contact{
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em; 
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
@@ -177,7 +177,7 @@ body{
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFFFFF;
     padding: 16px 32px;
@@ -317,7 +317,6 @@ body{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    letter-spacing: 0.02em;
     color: #434455;
 }
 .team-description{
@@ -326,7 +325,7 @@ body{
 }
 .summary{
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
     width: 264px;
@@ -383,6 +382,13 @@ body{
 .customers-section {
     padding: 96px 0
 }
+
+@media screen and (min-width: 1158px){
+    .customers-section {
+        padding: 120px 0
+    }
+}
+
 .logo-third{
     color: #f4f4fd;
 }
@@ -416,6 +422,11 @@ body{
     background-color: #F4F4FD;
     background: var(--cloud);
     padding: 96px 0;
+}
+@media screen and (min-width: 1158px) {
+    .team-section {
+        padding: 120px 0;
+    }    
 }
 .team-item{
     background-color: #FFFFFF;
@@ -562,15 +573,8 @@ body{
 }
 .strategy-link {
     display: none;
-    /*display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 264px;
-    height: 112px;
-    background: var(--cloud);
-    border-radius: var(--small-radius);
-    margin-bottom: 8px;*/
 }
+
 @media screen and (min-width:1158px) {
   .strategy-link{
     display: flex;
@@ -585,7 +589,7 @@ body{
 }
 
 .doing-section {
-    padding-bottom: 120px;
+    padding: 0 0 120px 0;
 }
 
 .team-list {
@@ -607,9 +611,8 @@ body{
     }
 }
 
-@media screen and (min-width: 768px){
-    .team-container{
-        padding: 32px 0;
+@media screen and (min-width: 1158px){
+    .team-list{
         flex-wrap: nowrap;
     }
 }
@@ -708,8 +711,8 @@ body{
     color: white;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
@@ -762,7 +765,7 @@ body{
     color: var(--white, #FFF);
     font-size: 12px;
     line-height: 1.5;
-    letter-spacing: 0.48px;
+    letter-spacing: 0.03em;
     padding: 8px 16px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
@@ -786,8 +789,8 @@ body{
     text-align: center;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.64px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
@@ -904,8 +907,8 @@ body{
 .modal-input{
     color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
     font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     width: 100%;
     height: 40px;
     padding: 11px 38px;
@@ -925,8 +928,8 @@ body{
     color: var(--lightslate, #8E8F99); 
     /* Small Text */
     font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     display: block;
     margin-bottom: 4px;
 }
@@ -946,7 +949,7 @@ body{
     color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
     line-height: 1.17;
     font-size: 12px;
-    letter-spacing: 0.48px;
+    letter-spacing: 0.04em;
     height: 120px;
     width: 100%;
     border-radius: 4px;
@@ -1004,12 +1007,11 @@ body{
 .modal-accept-text {
     color: #8E8F99;
     font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     user-select: none;
 }
 .modal-link{
-    line-height: 16px;
     text-decoration-line: underline;
     color: var(--iris, #4D5AE5);
 }
@@ -1088,7 +1090,7 @@ body{
     height: 100%;
     font-size: 16px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.32px;
     position: absolute;
     top: 0;
